adaptive-page-layout: fix filter btn class and removed overflow

--- a/CK.Ng.Zorro.Basic/AdaptivePageLayout/Res/adaptive-page-layout.less
+++ b/CK.Ng.Zorro.Basic/AdaptivePageLayout/Res/adaptive-page-layout.less
@@ -3,7 +3,6 @@ ck-adaptive-page-layout {
   flex-direction: column;
   height: 100%;
   gap: 1%;
-  overflow-y: auto;
 }
 
 .ck-adaptive-page-header {
@@ -63,6 +62,5 @@ ck-adaptive-page-layout {
 .ck-adaptive-page-content {
   display: flex;
   flex-direction: column;
-  overflow-y: auto;
   flex: 8.5;
 }
